Fix z-index for mobile nac toggle

--- a/index.css
+++ b/index.css
@@ -343,6 +343,7 @@ select {
 }
 
 .primary-navigation a {
+  padding-bottom: 100%;
   text-decoration: none;
 }
 
@@ -361,7 +362,7 @@ select {
   .primary-navigation {
     --underline-gap: 0.5rem;
     position: fixed;
-    z-index: 1000;
+    z-index: 9000;
     inset: 0 0 0 30%;
     list-style: none;
     padding: min(20rem, 15vh) 2rem;
@@ -382,7 +383,7 @@ select {
   .mobile-nav-toggle {
     display: block;
     position: absolute;
-    z-index: 2000;
+    z-index: 9001;
     right: 1rem;
     top: 2rem;
     background: transparent;
